Fixed misalignment caused by DMW

--- a/static_files/scss/jj-storefront.scss
+++ b/static_files/scss/jj-storefront.scss
@@ -476,7 +476,7 @@ a {
                     width         : 350px;
                     height        : 550px;
 
-                    &:nth-child(3n+3) {
+                    &:nth-child(3n+2) {
                         margin : auto 20px;
                     }
 
